Tests for API was added and bugs was fixed